Improved page titles

--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,3 +1,4 @@
+<% @page_title = @slaw_j["name"] %>
 <div class="contract">
   <form action="/contracts" method="POST">
     <input type="hidden" name="slaw_id" value="<%= @slaw_j["uuid"] %>">
